--- a/cms/static/sass/partials/_variables.scss
+++ b/cms/static/sass/partials/_variables.scss
@@ -43,9 +43,11 @@ $transparent: rgba(0,0,0,0) !default; // used when color value is needed for UI 
 // ====================
 $uxpl-blue-base: rgb(0, 117, 180) !default; // wcag2a compliant
 $uxpl-blue-hover-active: rgb(6, 86, 131) !default; // wcag2a compliant
+$uxpl-light-blue-base: rgb(242, 248, 251) !default
 
 $uxpl-green-base: rgb(0, 129, 0) !default; // wcag2a compliant
 $uxpl-green-hover-active: rgb(0, 155, 0) !default; // wcag2a compliant
+$uxpl-green-dark-hover-active: rgb(0,88,0) !default;
 
 $uxpl-pink-base: rgb(194, 56, 125) !default; // wcag2a compliant
 $uxpl-pink-hover-active: lighten($uxpl-pink-base, 7%) !default; // wcag2a compliant
@@ -218,7 +220,7 @@ $color-staff-only: $black !default;
 $color-gated: $black !default;
 
 $color-heading-base: $gray-d2 !default;
-$color-copy-base: $gray-l1 !default;
+$color-copy-base: $gray-d2 !default;
 $color-copy-emphasized: $gray-d2 !default;
 
 // +Timing
