--- a/cms/static/sass/views/_textbooks.scss
+++ b/cms/static/sass/views/_textbooks.scss
@@ -12,6 +12,7 @@
 
     .no-textbook-content {
       @extend %no-content;
+      color: $gray-d1;
     }
 
     .textbook {
